// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingWrapper renders children properly 1`] = `
<Styled(View)>
  <Styled(View)>
    <Component
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`LoadingWrapper renders children properly 2`] = `
<Styled(View)>
  <Styled(View)>
    <MockChild1 />
    <MockChild2 />
  </Styled(View)>
</Styled(View)>
`;

exports[`LoadingWrapper renders correctly 1`] = `
<Styled(View)>
  <Styled(View) />
</Styled(View)>
`;

exports[`LoadingWrapper renders correctly 2`] = `
<Styled(View)>
  <Styled(View)>
    <Component
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`LoadingWrapper renders style properly 1`] = `
<Styled(View)>
  <Styled(View)
    style={
      Object {
        "backgroundColor": "#000000",
        "color": "#ffffff",
      }
    }
  />
</Styled(View)>
`;
